# OptiPose

./: .gitignore  README.md  pyproject.toml  requirements.txt  use_model_inference.py
OptiPose/: DLT.py  KalmanFilter.py  __init__.py  config.py  pipeline.py  requirements.txt  skeleton.py  utils.py
OptiPose/data_store_interface/: DannceDataStore.py  DataStoreInterface.py  DeeplabcutDataStore.py  FlattenedDataStore.py  OptiPoseDataStore3D.py  __init__.py
OptiPose/model/: postural_autoencoder.py  utils.py
OptiPose/model/dataset/: augmentation.py  generate_dataset.py
OptiPose/models/: postural_autoencoder.py  utils.py
OptiPose/post_processor_interface/: ClusterAnalysisProcessor.py  DeconstructionProcessor.py  DistanceStatisticsFilterProcessor.py  FileLoadProcessor.py  FileSaveProcessor.py  GenerateVelocityProcessor.py  HeadingAnalysisProcessor.py  KalmanFilterProcessor.py  LinearInterpolationProcessor.py  MedianDistanceFilterProcessor.py  MovingAverageProcessor.py  PostProcessorInterface.py  PosturalAutoEncoderProcessor.py  RayTracerProcessor.py  ReconstructionProcessor.py  __init__.py
OptiPose/video_reader_interface/: CV2VideoInterface.py  DeffcodeVideoInterface.py  ImageSequenceInterface.py  VideoReaderInterface.py  __init__.py
cvkit_optipose/: __init__.py
examples/: convert_data_flavors.py  data_files.txt  model_train_df3d.py  model_train_r3d.py  read_data.py  use_evaluation_metrics.py  use_generate_dataset.py  use_model_inference.py  use_post_processors.py
examples/example_configs/: AcinoSet.yml  DF3D.yml  Fit3D.yml  Rat7M.yml  Rodent3D.yml
(+10 files in other folders)
